--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,12 +160,13 @@ body {
     box-shadow: 0 30px 20px -20px #000;
     box-sizing: border-box;
     border-radius: 10px;
+    z-index: 500;
 }
 
 /* Background style for the playlist */
 .musicList {
     position: absolute;
-    top: 109%;
+    top: 112%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -178,7 +179,59 @@ body {
     box-shadow: 0 30px 20px -20px #000;
     box-sizing: border-box;
     border-radius: 0px 0px 10px 10px;
-    transition: height 200ms;
+    z-index: 600;
+
+}
+
+/*================================ LOGIN SECTION ===============================*/
+
+.login {
+    margin-top: 2%;
+    margin-right: 2%;
+    float: right;
+    cursor: pointer;
+    width: 64px;
+    height: 64px;
+    opacity: 0.7;
+}
+
+.login:hover {
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+}
+
+#loginField {
+    position: absolute;
+    top: 3%;
+    right: 7%;
+    z-index: 1000;
+    width: 250px;
+    float: right;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 55px 55px 37px 55px;
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+    background: -o-linear-gradient(top, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, #7579ff, #b224ef);
+    background: linear-gradient(top, #7579ff, #b224ef);
+}
+
+#loginUserName {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    padding: 10px 35px;
+    border: 1px solid #ccc;
+    margin-left: 15%;
+}
+
+#loginPassword {
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-top: 2%;
+    margin-left: 15%;
+    border-radius: 10px;
+    padding: 10px 35px;
+    border: 1px solid #ccc;
 }
 
 /*================================ BUTTONS =====================================*/
@@ -291,11 +344,6 @@ header .setting {
     cursor: pointer;
 }
 
-/*header .setting:hover {*/
-/*    color: white;*/
-/*    transition: color 1s ease;*/
-/*}*/
-
 /******************* VOLUME BAR ****************/
 
 header .volume {
@@ -356,7 +404,7 @@ main {
 }
 
 main .album-art {
-    margin-top: 2%;
+    margin-top: 3%;
     float: left;
     padding: 0.5rem;
     background: #222;
@@ -374,6 +422,7 @@ main .player {
     float: right;
     width: 176px;
     height: 176px;
+    margin-top: 2%;
     background: -webkit-linear-gradient(bottom, #222, #111);
     background: linear-gradient(0deg, #222, #111);
     border-radius: 100%;
@@ -538,6 +587,7 @@ footer {
     text-align: center;
     line-height: 1.5em;
     font-size: 16px;
+    margin-top: -5%;
 }
 
 #audioInformation {
