--- a/templates/player.html
+++ b/templates/player.html
@@ -159,7 +159,7 @@
 
 <div class="space musicList overflow" id="showList">
 
-<div id="edit_buttons">
+<div id="edit_buttons" class="hidden">
     <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
     <input type="button" class="playerButtons" id="editCancelButton" value="CANCEL">
     <input type="button" class="playerButtons" id="deleteButton" value="CUT">
