--- a/templates/player.html
+++ b/templates/player.html
@@ -11,196 +11,194 @@
 </head>
 <body>
 
-<div onclick="showHideLogin()">
-    <img class="login" src="static/images/Login.png"/>
-</div>
-
-<div class="hidden" id="showLogin">
-    <div id="loginField">
-
-        <input placeholder="USERNAME" type="text" id="loginUserName">
-
-        <br>
-        <input placeholder="PASSWORD" type="text" id="loginPassword">
-
-        <br>
-        <input type="button" value="login" id="logInOutButton">
-
-        <br>
-        <span class="white" id="loginFieldMessage"></span>
+    <div onclick="showHideLogin()">
+        <img class="login" src="static/images/Login.png"/>
     </div>
-</div>
 
-<div id="audioController">
+    <div class="hidden" id="showLogin">
+        <div id="loginField">
 
-    <!-- DO NOT REMOVE! Maybe we still need this for debug. -->
-    <!--
-    <Label> audio position </Label>
-    <br>
-    <input class="range" type="range" id="audioPlaybackPositionControlSlider" min="0.0" max="1.0" step="0.01"
-           value="0.0">
-    <br>
+            <input placeholder="USERNAME" type="text" id="loginUserName">
 
-    Audio Position:
-    <output id="audioPlaybackPositionDisplay"></output>
-    <br>
-    Audio Position(Decimal):
-    <output id="audioPlaybackPositionDisplayDecimal"></output>
-    <br>
-    <br>
+            <br>
+            <input placeholder="PASSWORD" type="text" id="loginPassword">
 
-    <Label> audio volume (not linked with purple one)</Label>
-    <br>
-    <input class="range" type="range" id="audioVolumeControlSlider" min="0.0" max="3.0" step="0.05" value="1.5">
-    <br>
-    -->
+            <br>
+            <input type="button" value="LOGIN" id="logInOutButton">
 
-    <!-- debug: volume position -->
-    <!--
-    Volume Position:
-    <output id="audioVolumeDisplay"></output>
-    -->
+            <br>
+            <span class="white" id="loginFieldMessage"></span>
+        </div>
+    </div>
 
-    <!-- debug: repeat & random status -->
-    <!--
-    <br>
-    <br>
-    Repeat: <span id="audioRepeatPlayStatusDisplay">OFF</span>
-    <br>
-    Random: <span id="audioRandomPlayStatusDisplay">OFF</span>
+    <div id="audioController">
 
-    -->
+        <!-- DO NOT REMOVE! Maybe we still need this for debug. -->
+        <!--
+        <Label> audio position </Label>
+        <br>
+        <input class="range" type="range" id="audioPlaybackPositionControlSlider" min="0.0" max="1.0" step="0.01"
+               value="0.0">
+        <br>
 
-</div>
+        Audio Position:
+        <output id="audioPlaybackPositionDisplay"></output>
+        <br>
+        Audio Position(Decimal):
+        <output id="audioPlaybackPositionDisplayDecimal"></output>
+        <br>
+        <br>
+
+        <Label> audio volume (not linked with purple one)</Label>
+        <br>
+        <input class="range" type="range" id="audioVolumeControlSlider" min="0.0" max="3.0" step="0.05" value="1.5">
+        <br>
+        -->
+
+        <!-- debug: volume position -->
+        <!--
+        Volume Position:
+        <output id="audioVolumeDisplay"></output>
+        -->
+
+        <!-- debug: repeat & random status -->
+        <!--
+        <br>
+        <br>
+        Repeat: <span id="audioRepeatPlayStatusDisplay">OFF</span>
+        <br>
+        Random: <span id="audioRandomPlayStatusDisplay">OFF</span>
+
+        -->
+
+    </div>
 
 
-<div class="mediaplayer">
-    <header>
-        <div tooltip="click to  show your playlist">
-            <div onclick="showHideListFunction()">
-                <img class="playlist" src="static/images/playlistButton.png"/>
+    <div class="mediaplayer">
+        <header>
+            <div tooltip="click to  show your playlist">
+                <div onclick="showHideListFunction()">
+                    <img class="playlist" src="static/images/playlistButton.png"/>
+                </div>
             </div>
+            <div>
+                <div class="volume">
+                    <div class="volumeLine" id="audioPlayBackVolumeBar"></div>
+                    <div class="volumeBG" id="audioPlayBackVolumeController"></div>
+                    <img class="volumeIcon" src="static/images/volumeButton.png" id="volumeIcon"/>
+                    <img class="volumeIcon hidden" src="static/images/muteButton.png" id="muteIcon"/>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="album-art">
+                <canvas class="album-art frame" id="visualizer"></canvas>
+            </div>
+            <div class="player">
+                <img class="buttons repeat" src="static/images/loopButton.png" id="audioRepeatPlayButton"/>
+                <img class="buttons repeatActive hidden" src="static/images/loopButtonActive.png"
+                     id="audioRepeatPlayButtonActive"/>
+                <img class="buttons fast-backward" src="static/images/rewindButton.png" id="audioRewindButton"/>
+                <img class="buttons play" src="static/images/playButton.png" id="startAudioContext"/>
+                <img class="buttons pause hidden" src="static/images/pauseButton.png" id="audioPauseButton"/>
+                <img class="buttons fast-forward" src="static/images/skipButton.png" id="audioSkipButton"/>
+                <img class="buttons random" src="static/images/randomButton.png" alt="" id="audioRandomPlayButton"/>
+                <img class="buttons randomActive hidden" src="static/images/randomButtonActive.png" alt=""
+                     id="audioRandomPlayButtonActive"/>
+            </div>
+        </main>
+
+        <footer>
+            <div class="title" id="audioInformationFrame">
+                <p id="audioInformation"></p>
+            </div>
+
+            <div class="time-tracker">
+                <div class="timer">
+                    <div class="bgStart" id="audioPlayBackProgressBar"></div>
+                    <div class="bg" id="audioPlayBackProgressBarController"></div>
+                </div>
+            </div>
+            <div class="time" id="audioPlayBackProgressCounter">00:00:00</div>
+        </footer>
+
+
+        <div id="drop_zone_container">
+            <div id="drop_zone">
+                Drop mp3 here!
+            </div>
+        </div>
+        <div class="hidden">
+            <label for="selectFileButton" id="selectFileLabel">
+                OR CLICK HERE
+                <input type="file" name="inputFile" id="selectFileButton" accept="audio/mpeg">
+            </label>
         </div>
         <div>
-            <div class="volume">
-                <div class="volumeLine" id="audioPlayBackVolumeBar"></div>
-                <div class="volumeBG" id="audioPlayBackVolumeController"></div>
-                <img class="volumeIcon" src="static/images/volumeButton.png" id="volumeIcon"/>
-                <img class="volumeIcon hidden" src="static/images/muteButton.png" id="muteIcon"/>
-            </div>
+            <a class="lyricsButton" href="#popup1">SHOW LYRICS</a>
         </div>
-    </header>
-    <main>
-        <div class="album-art">
-            <canvas class="album-art frame" id="visualizer"></canvas>
+        <div class="drop_zone_message_container">
+            <span id="drop_zone_message"></span>
         </div>
-        <div class="player">
-            <img class="buttons repeat" src="static/images/loopButton.png" id="audioRepeatPlayButton"/>
-            <img class="buttons repeatActive hidden" src="static/images/loopButtonActive.png"
-                 id="audioRepeatPlayButtonActive"/>
-            <img class="buttons fast-backward" src="static/images/rewindButton.png" id="audioRewindButton"/>
-            <img class="buttons play" src="static/images/playButton.png" id="startAudioContext"/>
-            <img class="buttons pause hidden" src="static/images/pauseButton.png" id="audioPauseButton"/>
-            <img class="buttons fast-forward" src="static/images/skipButton.png" id="audioSkipButton"/>
-            <img class="buttons random" src="static/images/randomButton.png" alt="" id="audioRandomPlayButton"/>
-            <img class="buttons randomActive hidden" src="static/images/randomButtonActive.png" alt=""
-                 id="audioRandomPlayButtonActive"/>
-        </div>
-    </main>
-
-    <footer>
-        <div class="title" id="audioInformationFrame">
-            <p id="audioInformation"></p>
-        </div>
-
-        <div class="time-tracker">
-            <div class="timer">
-                <div class="bgStart" id="audioPlayBackProgressBar"></div>
-                <div class="bg" id="audioPlayBackProgressBarController"></div>
-            </div>
-        </div>
-        <div class="time" id="audioPlayBackProgressCounter">00:00:00</div>
-    </footer>
-
-
-    <div id="drop_zone_container">
-        <div id="drop_zone">
-            Drop mp3 here!
-        </div>
-    </div>
-    <div class="hidden">
-        <label for="selectFileButton" id="selectFileLabel">
-            OR CLICK HERE
-            <input type="file" name="inputFile" id="selectFileButton" accept="audio/mpeg">
-        </label>
-    </div>
-    <div>
-        <a class="lyricsButton" href="#popup1">SHOW LYRICS</a>
-    </div>
-    <div class="drop_zone_message_container">
-        <span id="drop_zone_message"></span>
-    </div>
-    <div id="popup1" class="overlay">
-        <div class="popup">
-            <a class="close" href="#">&times;</a>
-            <div class="content">
-                <textarea rows="50" cols="50" readonly="readonly" id="lyricsText">Lyrics here...</textarea>
+        <div id="popup1" class="overlay">
+            <div class="popup">
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                    <textarea rows="50" cols="50" readonly="readonly" id="lyricsText">Lyrics here...</textarea>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!--
-<div>
-    <textarea readonly="readonly" id="lyricsText">Lyrics here...</textarea>
-</div>
--->
-</div>
-
-
-<div class="space musicList overflow" id="showList">
-
-<div id="edit_buttons">
-    <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
-    <input type="button" class="playerButtons" id="editCancelButton" value="CANCEL">
-    <input type="button" class="playerButtons" id="deleteButton" value="CUT">
-    <input type="button" class="playerButtons" id="deleteConfirmButton" value="CONFIRM">
-    <input type="button" class="playerButtons" id="deleteCancelButton" value="CANCEL">
-</div>
-
-<div id="delete_buttons">
-
-</div>
-
-<div>
     <!--
-    <div class="padding" id="songSelectorTable"></div>
-    -->
-
-    <!-- NEW PROTOTYPE -->
-    <div class="padding">
-        <table id="songSelectorTable">
-            <tr>
-                <td></td>
-            </tr>
-        </table>
+    <div>
+        <textarea readonly="readonly" id="lyricsText">Lyrics here...</textarea>
     </div>
-    <div class="margin" id="tableDebug"></div>
-</div>
-</div>
+    -->
+    </div>
 
-<div id="preloader">
-    <div id="status">
-        <div class="spinner">
-            <div class="rect1"></div>
-            <div class="rect2"></div>
-            <div class="rect3"></div>
-            <div class="rect4"></div>
-            <div class="rect5"></div>
+
+    <div class="space musicList overflow" id="showList">
+
+    <div id="edit_buttons">
+        <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
+        <input type="button" class="playerButtons" id="editCancelButton" value="CANCEL">
+        <input type="button" class="playerButtons" id="deleteButton" value="CUT">
+        <input type="button" class="playerButtons" id="deleteConfirmButton" value="CONFIRM">
+        <input type="button" class="playerButtons" id="deleteCancelButton" value="CANCEL">
+    </div>
+
+    <div id="delete_buttons">
+
+    </div>
+
+    <div>
+        <!--
+        <div class="padding" id="songSelectorTable"></div>
+        -->
+
+        <!-- NEW PROTOTYPE -->
+        <div>
+            <table id="songSelectorTable">
+                <tr>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        <div class="margin hidden" id="tableDebug"></div>
+    </div>
+    </div>
+
+    <div id="preloader">
+        <div id="status">
+            <div class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+                <div class="rect5"></div>
+            </div>
         </div>
     </div>
-</div>
-
-
 </body>
 <script src="static/scripts/player.js"></script>
 </html>
