change: do not show table before login

--- a/templates/player.html
+++ b/templates/player.html
@@ -179,7 +179,7 @@
 
         <!-- NEW PROTOTYPE -->
         <div>
-            <table id="songSelectorTable">
+            <table id="songSelectorTable" class="hidden">
                 <tr>
                     <td></td>
                 </tr>
