--- a/templates/player.html
+++ b/templates/player.html
@@ -157,7 +157,7 @@
     </div>
 
 
-    <div class="space musicList overflow" id="showList">
+    <div class="space musicList overflow hidden" id="showList">
 
 <div id="edit_buttons" class="hidden">
     <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
