fix password input

--- a/templates/player.html
+++ b/templates/player.html
@@ -21,7 +21,7 @@
             <input placeholder="USERNAME" type="text" id="loginUserName">
 
             <br>
-            <input placeholder="PASSWORD" type="text" id="loginPassword">
+            <input placeholder="PASSWORD" type="password" id="loginPassword">
 
             <br>
             <input type="button" value="LOGIN" id="logInOutButton">
